<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- wind direction -->
    <string name="wind_0">N</string>
    <string name="wind_360">N</string>
    <string name="wind_45">NE</string>
    <string name="wind_90">E</string>
    <string name="wind_135">SE</string>
    <string name="wind_180">S</string>
    <string name="wind_225">SW</string>
    <string name="wind_270">W</string>
    <string name="wind_315">NW</string>
    <!-- Cloudy -->
    <string name="blizzard">Blizzard</string>
    <string name="cloudy_with_sun">Cloudy with sun</string>
    <string name="hail">Hail</string>
    <string name="cloudy">Cloudy</string>
    <string name="fog">Fog</string>
    <string name="overcast">Overcast</string>
    <string name="rain">Rain</string>
    <string name="rain_with_thunderstorms">Rain with thunderstorms</string>
    <string name="short_rain">Short rain</string>
    <string name="slee">Slee</string>
    <string name="snow">Snow</string>
    <string name="snow_with_rain">Snow with rain</string>
    <string name="sunny">Sunny</string>

    <!-- App -->
    <string name="app_name">WeatherAggregator</string>
    <string name="ok">OK</string>
    <string name="action_settings">Settings</string>
    <string name="temp">Temp:</string>
    <string name="wind">Wind:</string>
    <string name="humidity">Humidity:</string>
    <string name="user_forecast">My forecast</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nan_city">N/A</string>
    <string name="na">N/A</string>
    <string name="action_cearch">Search</string>
    <!-- Menu -->
    <string name="menu_settings">Settings</string>
    <string name="menu_statistic">Statistic</string>
    <string name="menu_city">City</string>
    <string name="menu_service">Services</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="setting_city">List of cities</string>
    <string name="setting_service">My services</string>
    <string name="setting_unit">Settings units of measure</string>
    <string name="title_settings">General settings</string>
    <string name="my_city_list">My cities</string>
    <string name="my_service_list">My service</string>
    <string name="setting_measure">Settings units of measure</string>
    <string name="add_city">Add new</string>
    <string name="my_location">My location</string>
    <string name="mmHg">mmHg</string>
    <string name="kPa">kPa</string>
    <string name="mbar">mbar</string>
    <string name="inHg">inHg</string>
    <string name="m_s">m/s</string>
    <string name="km_h">km/h</string>
    <string name="mi_h">mi/h</string>
    <string name="percent">%</string>
    <string name="celsius">°C</string>
    <string name="fahrenheit">°F</string>
    <string name="mm">mm</string>
    <string name="psi">psi</string>
    <string name="nan">N/A</string>

    <!-- Measure -->
    <string name="save">Save</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind speed</string>
    <string name="pressure">Pressure</string>

    <!-- DetailWeather -->
    <string name="lbl_agree">AGREE</string>
    <string name="lbl_disagree">DISAGREE</string>
    <string name="lbl_sunrise">Sunrise:</string>
    <string name="lbl_sunset">Sunset:</string>
    <string name="lbl_min_temp">Min. temp:</string>
    <string name="lbl_max_temp">Max. temp:</string>
    <string name="lbl_precipitation">Precipitation:</string>
    <string name="lbl_humidity">Humidity:</string>
    <string name="lbl_wind_direction">Wind direction:</string>
    <string name="lbl_wind_speed">Wind speed:</string>
    <string name="lbl_min_wind">Min. wind:</string>
    <string name="lbl_max_wind">Max. wind:</string>
    <string name="lbl_pressure">Pressure:</string>
    <string name="lbl_max_pressure">Max. pressure:</string>
    <string name="lbl_min_pressure">Min. pressure:</string>

    <!-- About -->
    <string name="about_version">App version:</string>
    <string name="about_server">Server:</string>
    <string name="about_user">User name:</string>
    <string name="about">About</string>
    <string name="contact_us">Contact us</string>

    <!-- Progress message -->
    <string name="load_date_first_time">Loading...</string>

    <!-- Socials -->
    <string name="facebook_app_id">503270459783518</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google_plus">G+</string>
    <string name="share">Share</string>
    <string name="share_message" formatted="false">Current temperature: %d\nMinimum temperature: %d\nMaximum
        temperature: %d\nWind speed: %s
</string>
    <string name="dlg_host_not_available">Server not available. Do you want to exit from application?</string>
    <string name="dlg_no_internet_connection">No internet connction. Do you want to exit from application?</string>
    <string name="dlg_incorrect_data">Incorrect data.</string>
    <string name="toas_no_internet_connection">No internet connction.</string>
    <string name="toast_problem_load_data">Problem with loading data.</string>
    <string name="toast_host_not_available">Server not available.</string>
    <string name="empty_msg">Empty data</string>
    <string name="now">now</string>
    <string name="limit_city">You can not add more city.</string>

</resources>