<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            style="@style/Widget.Detail.Weather.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_min_temp" />

        <TextView
            style="@style/Widget.Detail.Weather.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_max_temp" />

        <TextView
            style="@style/Widget.Detail.Weather.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_precipitation" />

        <TextView
            style="@style/Widget.Detail.Weather.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_humidity" />

        <TextView
            style="@style/Widget.Detail.Weather.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_wind_direction" />

        <TextView
            style="@style/Widget.Detail.Weather.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_wind_speed" />

        <TextView
            style="@style/Widget.Detail.Weather.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_max_wind" />

        <TextView
            style="@style/Widget.Detail.Weather.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_min_wind" />

        <TextView
            style="@style/Widget.Detail.Weather.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_pressure" />

        <TextView
            style="@style/Widget.Detail.Weather.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_max_pressure" />

        <TextView
            style="@style/Widget.Detail.Weather.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_min_pressure" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvMinTemp"
            style="@style/Widget.Detail.Weather.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvMaxTemp"
            style="@style/Widget.Detail.Weather.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvPrecipitation"
            style="@style/Widget.Detail.Weather.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvHumidity"
            style="@style/Widget.Detail.Weather.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvWindDirection"
            style="@style/Widget.Detail.Weather.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvWindSpeed"
            style="@style/Widget.Detail.Weather.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvMaxWind"
            style="@style/Widget.Detail.Weather.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvMinWind"
            style="@style/Widget.Detail.Weather.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvPressure"
            style="@style/Widget.Detail.Weather.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvMaxPressure"
            style="@style/Widget.Detail.Weather.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvMinPressure"
            style="@style/Widget.Detail.Weather.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>