<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:id="@+id/tvWind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind"/>

    <ImageView
            android:id="@+id/imgCloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:src="@android:drawable/ic_menu_camera"/>

    <TextView
            android:id="@+id/tvTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgCloud"
            android:layout_marginTop="85dp"
            android:layout_toRightOf="@+id/imgCloud"
            android:text="@string/temp"/>

    <TextView
            android:id="@+id/tvWindValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tvTemp"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="24dp"
            android:layout_toRightOf="@+id/tvHumidityValue"
            android:text="wind val"/>

    <TextView
            android:id="@+id/tvHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvWindValue"
            android:layout_below="@+id/imgCloud"
            android:layout_marginTop="15dp"
            android:text="@string/humidity"/>

    <TextView
            android:id="@+id/tvHumidityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvWindValue"
            android:layout_toRightOf="@+id/imgCloud"
            android:text="humidity val"/>

    <TextView
            android:id="@+id/tvTempValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgCloud"
            android:layout_toLeftOf="@+id/tvWindValue"
            android:text="temp val"/>

    <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvHumidity"
            android:layout_alignLeft="@+id/tvHumidity"
            android:text="@string/user_forecast"/>

    <ImageView
            android:id="@+id/imgServiceLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/tvTempValue"
            android:layout_below="@+id/tvWind"
            android:src="@android:drawable/ic_menu_report_image"/>

    <ImageView
            android:id="@+id/imgRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_alignParentTop="true"
            android:src="@android:drawable/btn_star_big_off"/>

</RelativeLayout>