<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <LinearLayout
        android:id="@+id/llAddNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/select_selector" >

        <ImageView
            android:id="@+id/ivAddNew"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/icon" />

        <TextView
            android:id="@+id/tvAddNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/add_city" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/llMyLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llAddNew"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="5dp" >

        <ImageView
            android:id="@+id/ivMyLocation"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:src="@drawable/icon" />

        <TextView
            android:id="@+id/tvMyLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_toLeftOf="@+id/tbLocation"
            android:layout_toRightOf="@+id/ivMyLocation"
            android:text="@string/my_location" />

        <ToggleButton
            android:id="@+id/tbLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <com.mobeta.android.dslv.DragSortListView
        xmlns:dslv="http://schemas.android.com/apk/res/com.weatheraggregator.app"
        android:id="@+id/lvCities"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/llMyLocation"
        android:dividerHeight="5dp"
        android:fastScrollEnabled="true"
        dslv:collapsed_height="2dp"
        dslv:drag_enabled="true"
        dslv:drag_handle_id="@id/drag_handle"
        dslv:drag_scroll_start="0.33"
        dslv:drag_start_mode="onLongPress"
        dslv:float_alpha="0.6"
        dslv:max_drag_scroll_speed="0.59"
        dslv:remove_enabled="true"
        dslv:remove_mode="flingRemove"
        dslv:slide_shuffle_speed="0.3"
        dslv:sort_enabled="true"
        dslv:track_drag_sort="false"
        dslv:use_default_controller="true" />
    <TextView
        android:id="@+id/tvEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/empty_msg"
       />
</RelativeLayout>